More Mex Focus loc
see: walls of text

--- a/toi/localisation/english/mex_l_english.yml
+++ b/toi/localisation/english/mex_l_english.yml
@@ -385,26 +385,26 @@
  MEX_focus_fortify_vera_cruz: "Fortify Vera Cruz"
  MEX_focus_fortify_vera_cruz_desc: "While Ciudad de México is in Reactionary hands, we have had to make our base, our temporary capital, in Vera Cruz; our largest Port, through which we can reach, and be reached by, the entire Mexican East Coast, as well as the Americans to the North. From here we can also block much European support from reaching the Reactionaries. It is vital that this port not fall, and therefore we must ready our defenses and fortify the city against all assault."
  MEX_focus_seek_US_help: "Seek US Assistance"
- MEX_focus_seek_US_help_desc: ""
+ MEX_focus_seek_US_help_desc: "We can not be certain of our ability to defeat the Reactionaries, who are already favored by European governments who themsleves are generally more favorable to established religions and centralized power. We must begin looking for allies ourselves. While arrogant, the American 'Monroe Doctrine' demands the Americans favor us if the Europeans favor the Reactionaries, and La Reforma should invite American favor as we pursue a government more closely comparable to theirs. But we must be watchful of the rapacious northern wolves, barely ten years since the American Intervention, less for the La Mesilla sale; the American President, Buchanan, demanded more of our territory, and the American Ambassador, Forsythe, has been seeking agreements for further sales of Mexican sovereign territory."
  MEX_focus_mcclane_ocampo_treaty: "McClane-Ocampo Treaty"
- MEX_focus_mcclane_ocampo_treaty_desc: ""
+ MEX_focus_mcclane_ocampo_treaty_desc: "Even as the ink was drying on our last agreement with the Americans, they have come to us with an extraordinary proposal, whose ramifications could be huge."
  MEX_focus_seek_european_acknowledgement: "Seek European Recognition"
- MEX_focus_seek_european_acknowledgement_desc: ""
+ MEX_focus_seek_european_acknowledgement_desc: "Since we have held on for so long, we must begin opening more diplomatic channels, for if we win this war we must normalize relations with countries who support the Reactionaries. And in the meanwhile we might simply be able to restrict European assistance to the Reactionaries."
  MEX_focus_call_out_state_guards: "Call Out The National Guard"
- MEX_focus_call_out_state_guards_desc: ""
+ MEX_focus_call_out_state_guards_desc: "While we have access to the various militias that have formed to defend the government, and what parts of the army remained loyal, we should also call on the organized National Guard units each state governor controls."
  MEX_focus_call_on_fronterizos: "Call On The Fronterizos"
- MEX_focus_call_on_fronterizos_desc: ""
+ MEX_focus_call_on_fronterizos_desc: "The frontiersmen of Sonora and Chihuahua respect a federalized government that protects their liberty on the Apache frontier. We can turn their sympathies to our benefit by courting volunteers from the frontier to help us in our struggle."
  MEX_focus_raise_funds_by_theft: "Funds By Theft"
- MEX_focus_raise_funds_by_theft_desc: ""
+ MEX_focus_raise_funds_by_theft_desc: "In times of crisis it is difficult to move the required money around to guarantee the payment or, more often, repayment this war requires of any one who does business with us or the army. Because of this there have regrettably at times been instances where goods or services are solicited without certain guarantees of compensation. Some particular field commanders have taken the initiative to secure a source of funds by claiming certain baggage trains full of silver that might belong to foreign nations."
  MEX_focus_reform_war_conscription: "Reform War Conscription"
- MEX_focus_reform_war_conscription_desc: ""
+ MEX_focus_reform_war_conscription_desc: "We must begin recruitment for the forces required to triumph over the rebels!"
 
  MEC_focus_implement_five_laws: "Implement The Five Laws"
- MEC_focus_implement_five_laws_desc: ""
+ MEC_focus_implement_five_laws_desc: "The disgraceful and unholy Liberal Reforma must be undone. While we are repairing the government of the damage done to it by the traitor Comonfort, we should correct these laws as well. The fueros of the Church and Military restored, the secular courts and media curtailed, and all confiscated land returned."
  MEC_focus_appoint_conservative_cabinet: "Appoint a Conservative Cabinet"
- MEC_focus_appoint_conservative_cabinet_desc: ""
+ MEC_focus_appoint_conservative_cabinet_desc: "With the worsening situation nationally, we need a government of respectable officers to carry out President Zuloaga's plans and defeat the Liberals."
  MEC_focus_conservatives_increase_tariffs: "Increase Tariffs"
- MEC_focus_conservatives_increase_tariffs_desc: ""
+ MEC_focus_conservatives_increase_tariffs_desc: "With the costs of fighting the Rebels, combined with the occupation of Vera Cruz, we are facing a difficult financial situation. Restoring land or income taxes will turn the people against quicker than anything, so we are faced with the only option of raising import duties."
  MEC_focus_approach_church_for_funds: "Approach Church For Funds"
  MEC_focus_approach_church_for_funds_desc: ""
  MEC_focus_forced_loans: "Forced Loans"
