--- a/toi/localisation/english/mex_l_english.yml
+++ b/toi/localisation/english/mex_l_english.yml
@@ -406,15 +406,15 @@
  MEC_focus_conservatives_increase_tariffs: "Increase Tariffs"
  MEC_focus_conservatives_increase_tariffs_desc: "With the costs of fighting the Rebels, combined with the occupation of Vera Cruz, we are facing a difficult financial situation. Restoring land or income taxes will turn the people against quicker than anything, so we are faced with the only option of raising import duties."
  MEC_focus_approach_church_for_funds: "Approach Church For Funds"
- MEC_focus_approach_church_for_funds_desc: ""
+ MEC_focus_approach_church_for_funds_desc: "Because of how damaged by war trade has become, our attempts at raising import duties and excise taxes has netted us far too little revenue to pay for the ongoing expenses of this war, and our bonds are becoming increasingly difficult to sell. As unappetizing as it is, we must ask the Holy Church of Jesus Christ to help us financially in their defense. To their credit, our clerical friends seem willing, extending us lines of credit and guarantees, let us hope it will be enough."
  MEC_focus_forced_loans: "Forced Loans"
- MEC_focus_forced_loans_desc: ""
+ MEC_focus_forced_loans_desc: "Our financial situation is becoming increasingly dire. It has become essentially impossible to secure loans, and we are out of specie entirely. At this point, we must admit that nothing beyond compelled loans can save our financial situation. Furthermore it seems like a good place to secure this first loan is at the British Legation, which is presently housing a great sum of money supplied by the Juaristas for the payment of their own debts."
  MEC_focus_provisional_constitution: "A Provisional Constitution"
- MEC_focus_provisional_constitution_desc: ""
+ MEC_focus_provisional_constitution_desc: "To prove we are serious about forming a government for all of Mexico, Señor Zuloaga and the governning council are drafting a constitution to provide a shape of the government until a more organized Constitutional Convention can be held after the Juaristas are put down."
  MEC_focus_navidad_plan: "Plan de Navidad"
- MEC_focus_navidad_plan_desc: ""
+ MEC_focus_navidad_plan_desc: "Señor Zuloaga's prosecution of the war, his failure of a constitution, and his uncomprimising nature are ruining the Conservative movement. If we are to prosper in this war, he needs to be confronted or removed."
  MEC_focus_raising_militias: "Raising Militias"
- MEC_focus_raising_militias_desc: ""
+ MEC_focus_raising_militias_desc: "Most of the Army joined us after the Plan of Tacubaya was declared. We have the superior troops, but unless we increase the size of armies we will be buried by waves of fresh Juarista troops. We can raise militias in the states we control, accepting volunteers or compelling conscription if need be."
  MEC_focus_european_recognition: "Benefits Of European Recognition"
  MEC_focus_european_recognition_desc: ""
  MEC_focus_spanish_help: "Seek Assistance From Spain"
