--- a/toi/localisation/english/mex_l_english.yml
+++ b/toi/localisation/english/mex_l_english.yml
@@ -416,15 +416,15 @@
  MEC_focus_raising_militias: "Raising Militias"
  MEC_focus_raising_militias_desc: "Most of the Army joined us after the Plan of Tacubaya was declared. We have the superior troops, but unless we increase the size of armies we will be buried by waves of fresh Juarista troops. We can raise militias in the states we control, accepting volunteers or compelling conscription if need be."
  MEC_focus_european_recognition: "Benefits Of European Recognition"
- MEC_focus_european_recognition_desc: ""
+ MEC_focus_european_recognition_desc: "One advantage our Government has is the esteem European Ambassadors hold our agents. They report to their government their positive estimations of us, and in turn we are able to secure some financial assistance as well as arms. In particular it appears that the Spanish government is trying to ingratiate themselves to us."
  MEC_focus_spanish_help: "Seek Assistance From Spain"
- MEC_focus_spanish_help_desc: ""
+ MEC_focus_spanish_help_desc: "The Government of Isabel I, Reina de España, has been pressing for a closer relationship with our Government. We must pursue this opportunity to grow closer with our Spanish Brothers."
  MEC_focus_support_for_veracruz_invasion: "Support Vera Cruz Invasion"
- MEC_focus_support_for_veracruz_invasion_desc: ""
+ MEC_focus_support_for_veracruz_invasion_desc: "What we really need is assistance to take Vera Cruz. The Spanish Navy has been stationing more and more vessels off the coast, to 'protect Spanish Citizens', we must seek to convince our friends to turn those ships on our enemies, so we can seize the vital Port."
  MEC_focus_raise_navy: "Raise A Navy"
- MEC_focus_raise_navy_desc: ""
+ MEC_focus_raise_navy_desc: "To support our operations on the coast, taking Vera Cruz and other Juarista ports, we need a navy of our own. We can dispatch agents to Spanish Cuba, where we have been told armed vessels will be 'made available' to us for purchase. With these we might be able to turn this to our advantage against Vera Cruz."
  MEC_focus_mon_almonte_treaty: "The Mon-Almonte Treaty"
- MEC_focus_mon_almonte_treaty_desc: ""
+ MEC_focus_mon_almonte_treaty_desc: "With this treaty we will finally gain official acknowledgemtn from the Spanish Government and be viewed as the legitimate government in Mexico. Further we are being told a generous financial package is being prepared for us once we sign."
  MEC_focus_seek_french_monarch: "Seek a French Monarch"
  MEC_focus_seek_french_monarch_desc: ""
  MEC_focus_seek_spanish_monarch: "Invite The Spanish Monarch"
