--- a/toi/localisation/english/spain_l_english.yml
+++ b/toi/localisation/english/spain_l_english.yml
@@ -1022,3 +1022,4 @@ SPR_not_in_crisis_tt: "§Y[SPR.GetName]§! is not dealing with a Pressing Confli
 eoanb_decision_establish_cambodian_protectorate: "Establish Cambodian Protectorate"
 
 dynmod_local_slavery: "Local Slavery Legal"
+spainsh_rapprochment: "Spainish Rapprochement"
