--- a/toi/localisation/english/parties_l_english.yml
+++ b/toi/localisation/english/parties_l_english.yml
@@ -882,7 +882,7 @@
 
  AFG_autocracy_party: "House of Barakzai"
 
- QNG_autocracy_party: "House of Qing"
+ QNG_autocracy_party: "House of Aisin-Goro"
 
  SIA_social_egalitarianism_party: "SD"
  SIA_centrism_party: "DA"
